--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -4,7 +4,7 @@ $body-bg: #eee;
 // darkmode
 $darkmode-darker: #181a1b;
 $darkmode-lighter: #1C1E1F;
-$darkmode-link: #6993dd;
+$darkmode-link: #7aa4ee;
 $darkmode-text: #cdc9c2;
 
 
